# libkvmem

./: AUTHORS  Makefile  Makefile.am  README.md  TODO  configure.ac
include/: kvmem.h  kvmem_elf.h  kvmem_io.h
src/: kvmem.c  kvmem_elf.c  kvmem_io.c  kvmem_private.h
tests/: test1.c  test2.c
